[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "docsmoke"
version = "0.1.0"
description = "Validate executable Markdown documentation snippets before they drift."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ugur Kontel" }]
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "tomli>=2.0 ; python_version < '3.11'",
    "typing-extensions>=4.10 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
docsmoke = "docsmoke.cli:app"

[project.urls]
Homepage = "https://github.com/dev-ugurkontel/docsmoke"
Repository = "https://github.com/dev-ugurkontel/docsmoke"
Issues = "https://github.com/dev-ugurkontel/docsmoke/issues"
Documentation = "https://github.com/dev-ugurkontel/docsmoke/tree/main/docs"
Changelog = "https://github.com/dev-ugurkontel/docsmoke/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/docsmoke"]

[tool.hatch.build.targets.wheel.force-include]
"src/docsmoke/py.typed" = "docsmoke/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "TCH", "PTH", "N", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=docsmoke",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["docsmoke"]
omit = ["src/docsmoke/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

