[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "docsmoke"
version = "1.0.0"
description = "Executable documentation smoke tests for Markdown snippets."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Uğur Kontel" }]
keywords = [
    "documentation",
    "markdown",
    "testing",
    "cli",
    "developer-tools",
    "ci",
    "readme",
    "docs-as-tests",
    "github-actions",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "tomli>=2.0 ; python_version < '3.11'",
    "typing-extensions>=4.10 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "build>=1.2",
    "jsonschema>=4.23",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
docsmoke = "docsmoke.cli:app"

[project.urls]
Homepage = "https://dev-ugurkontel.github.io/docsmoke/"
Repository = "https://github.com/dev-ugurkontel/docsmoke"
Issues = "https://github.com/dev-ugurkontel/docsmoke/issues"
Documentation = "https://dev-ugurkontel.github.io/docsmoke/"
Discussions = "https://github.com/dev-ugurkontel/docsmoke/discussions"
Support = "https://github.com/dev-ugurkontel/docsmoke/blob/main/SUPPORT.md"
Changelog = "https://github.com/dev-ugurkontel/docsmoke/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/dev-ugurkontel"

[tool.hatch.build.targets.wheel]
packages = ["src/docsmoke"]

[tool.hatch.build.targets.wheel.force-include]
"src/docsmoke/py.typed" = "docsmoke/py.typed"
"NOTICE" = "NOTICE"

[tool.docsmoke]
include = ["README.md", "docs/**/*.md", "examples/**/*.md"]
exclude = [".venv/**", "build/**", "dist/**", "htmlcov/**"]
default_timeout = 10.0
fail_fast = false
require_directive = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TCH",
    "PTH",
    "ARG",
    "S",
    "N",
    "C4",
]
ignore = [
    "S603",
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tomllib", "tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=docsmoke",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["docsmoke"]
omit = ["src/docsmoke/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B404", "B603"]
